--- a/webapp/extended_runnable_file.html
+++ b/webapp/extended_runnable_file.html
@@ -6,6 +6,7 @@
 		
 		<title>Força de Vendas</title>
 		
+			<!--src="https://sapui5.hana.ondemand.com/resources/sap-ui-core.js"-->
 		<script id="sap-ui-bootstrap" src="https://sapui5.hana.ondemand.com/resources/sap-ui-core.js" data-sap-ui-theme="sap_belize" data-sap-ui-libs="sap.m" data-sap-ui-compatversion="edge" data-sap-ui-preload="async" data-sap-ui-xx-bindingsyntax="complex" data-sap-ui-resourceroots="{&quot;testeui5&quot;: &quot;./&quot;, &quot;sap.ui.demo.mock&quot;: &quot;model&quot;}">
 		</script>
 		
