--- a/webapp/index.html
+++ b/webapp/index.html
@@ -6,6 +6,7 @@
 		
 		<title>Força de Vendas</title>
 		
+			<!--src="https://sapui5.hana.ondemand.com/resources/sap-ui-core.js"-->
 		<script
 			id="sap-ui-bootstrap"
 			src="https://sapui5.hana.ondemand.com/resources/sap-ui-core.js"
