--- a/webapp/index.html
+++ b/webapp/index.html
@@ -6,7 +6,12 @@
 		
 		<title>Força de Vendas</title>
 		
-			<!--src="https://sapui5.hana.ondemand.com/resources/sap-ui-core.js"-->
+			<!--
+			src="https://sapui5.hana.ondemand.com/resources/sap-ui-core.js"
+			-->
+			<!--
+			src="./resources/sap-ui-core.js"
+			-->
 		<script
 			id="sap-ui-bootstrap"
 			src="https://sapui5.hana.ondemand.com/resources/sap-ui-core.js"
